2006-05-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/beam-single-stem.ly: new file.

	* lily/stem.cc (set_beaming): use #f as signaling value for
	beamcount 0.

	* lily/beam-engraver.cc (typeset_beam): set right bound if unset.

	* lily/beam.cc (set_beaming): read clip-edges property.
	(calc_direction): don't suicide for single stem.

	* lily/beaming-info.cc (best_splitpoint_index): take bool*
	argument, remove 1<<15 hack. Remove clip_edges() 

	* lily/hairpin.cc (print): only do padding for nonmusical bounds

2006-05-21  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: reorg.

	* Documentation/user/ various: minor fixes.

2006-05-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/stencil-expression.cc (register_stencil_head): opps, append
	to cdr of static SCM object. Backportme.

2006-05-19  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/README.txt, lilypond.tely, macros.itexi:
	update framework for command index.  DOC WRITERS: use @funindex
	instead of @cindex @code{}.

	* Documentation/user/ various: replace @cindex @code{} => @funindex

2006-05-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/beam.cc (set_stem_lengths): trigger 'beaming callback, in
	case positions is set manually. Backportme.

2006-05-18  Erik Sandberg  <mandolaerik@gmail.com>
	
	* scm/ly-syntax-constructors.scm: New file. Converted a few syntax
	rules to Scheme.

2006-05-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/user/changing-defaults.itely (Contexts explained):
	use absolute dimension for @image.

	* Documentation/user/GNUmakefile (OUT_PNG_IMAGES): generate PNG
	out image for illustration too.
	($(outdir)/%.png): add more png <-> eps rules. 

2006-05-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: remove trailing whitespace, cosmetic
	change to reduce changes produced by diff.

2006-05-17  Han-Wen Nienhuys  <hanwen@lilypond.org>
